Add CMidSiteMage structure

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3340,6 +3340,9 @@
     <ClInclude Include="include\midsitemerchant.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\midsitemage.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
