Add CMidSiteTrainer structure

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3346,6 +3346,9 @@
     <ClInclude Include="include\midsitemercs.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\midsitetrainer.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
