--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -790,6 +790,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midsitemage.h" />
     <ClInclude Include="include\midsitemerchant.h" />
     <ClInclude Include="include\midsitemercs.h" />
+    <ClInclude Include="include\midsitetrainer.h" />
     <ClInclude Include="include\midunitext.h" />
     <ClInclude Include="include\midunitgroupadapter.h" />
     <ClInclude Include="include\mqdb.h" />
