Add lua bindings for sites

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1286,6 +1286,9 @@
     <ClCompile Include="src\bindings\crystalview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\siteview.cpp">
+      <Filter>bindings</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3348,6 +3351,9 @@
     </ClInclude>
     <ClInclude Include="include\midsitetrainer.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\siteview.h">
+      <Filter>bindings</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
