--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1289,6 +1289,9 @@
     <ClCompile Include="src\bindings\siteview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\merchantview.cpp">
+      <Filter>bindings</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3353,6 +3356,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\bindings\siteview.h">
+      <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\merchantview.h">
       <Filter>bindings</Filter>
     </ClInclude>
   </ItemGroup>
