--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -203,6 +203,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\bindings\globalvariablesview.cpp" />
     <ClCompile Include="src\bindings\globalview.cpp" />
     <ClCompile Include="src\bindings\merchantview.cpp" />
+    <ClCompile Include="src\bindings\mercsview.cpp" />
     <ClCompile Include="src\bindings\siteview.cpp" />
     <ClCompile Include="src\bindings\unitviewdummy.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
@@ -652,6 +653,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\bindings\globalvariablesview.h" />
     <ClInclude Include="include\bindings\globalview.h" />
     <ClInclude Include="include\bindings\merchantview.h" />
+    <ClInclude Include="include\bindings\mercsview.h" />
     <ClInclude Include="include\bindings\siteview.h" />
     <ClInclude Include="include\bindings\unitviewdummy.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
