--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -205,6 +205,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\bindings\merchantview.cpp" />
     <ClCompile Include="src\bindings\mercsview.cpp" />
     <ClCompile Include="src\bindings\siteview.cpp" />
+    <ClCompile Include="src\bindings\trainerview.cpp" />
     <ClCompile Include="src\bindings\unitviewdummy.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
     <ClCompile Include="src\bindings\fortview.cpp" />
@@ -655,6 +656,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\bindings\merchantview.h" />
     <ClInclude Include="include\bindings\mercsview.h" />
     <ClInclude Include="include\bindings\siteview.h" />
+    <ClInclude Include="include\bindings\trainerview.h" />
     <ClInclude Include="include\bindings\unitviewdummy.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
     <ClInclude Include="include\bindings\fortview.h" />
