--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1298,6 +1298,9 @@
     <ClCompile Include="src\bindings\trainerview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\aiattitudescat.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3372,6 +3375,9 @@
     </ClInclude>
     <ClInclude Include="include\bindings\trainerview.h">
       <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\aiattitudescat.h">
+      <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
