--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -156,6 +156,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="..\SLikeNet\DependentExtensions\Lobby2\Rooms\RoomsPlugin.cpp" />
     <ClCompile Include="..\SLikeNet\DependentExtensions\Lobby2\Rooms\RoomTypes.cpp" />
     <ClCompile Include="src\aiattitudescat.cpp" />
+    <ClCompile Include="src\aiattitudestable.cpp" />
     <ClCompile Include="src\aigiveitemsaction.cpp" />
     <ClCompile Include="src\aigiveitemsactionhooks.cpp" />
     <ClCompile Include="src\aimovestackaction.cpp" />
@@ -579,6 +580,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\2denginemapimpl.h" />
     <ClInclude Include="include\aiattitudes.h" />
     <ClInclude Include="include\aiattitudescat.h" />
+    <ClInclude Include="include\aiattitudestable.h" />
     <ClInclude Include="include\aiblockingstats.h" />
     <ClInclude Include="include\aigiveitemsaction.h" />
     <ClInclude Include="include\aigiveitemsactionhooks.h" />
