--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -465,6 +465,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\scenariodata.cpp" />
     <ClCompile Include="src\scenariodataarray.cpp" />
     <ClCompile Include="src\scenarioheader.cpp" />
+    <ClCompile Include="src\scenpropinterf.cpp" />
     <ClCompile Include="src\scripts.cpp" />
     <ClCompile Include="src\scriptutils.cpp" />
     <ClCompile Include="src\settings.cpp" />
@@ -1120,6 +1121,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\scenariodataarray.h" />
     <ClInclude Include="include\scenarioheader.h" />
     <ClInclude Include="include\scenarioinfo.h" />
+    <ClInclude Include="include\scenpropinterf.h" />
     <ClInclude Include="include\scripts.h" />
     <ClInclude Include="include\scriptutils.h" />
     <ClInclude Include="include\settings.h" />
