Allow changing Netrals attitude from scenario properties menu

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1301,6 +1301,9 @@
     <ClCompile Include="src\scenpropinterf.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\scenpropinterfhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
     <ClCompile Include="src\aiattitudescat.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -3384,6 +3387,9 @@
     </ClInclude>
     <ClInclude Include="include\scenpropinterf.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\scenpropinterfhooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
     <ClInclude Include="include\aiattitudescat.h">
       <Filter>game</Filter>
