Add lua bindings for mutable BattleMsgData

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -197,6 +197,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\batviewer2dengine.cpp" />
     <ClCompile Include="src\bindings\attackview.cpp" />
     <ClCompile Include="src\bindings\battlemsgdataview.cpp" />
+    <ClCompile Include="src\bindings\battlemsgdataviewmutable.cpp" />
     <ClCompile Include="src\bindings\crystalview.cpp" />
     <ClCompile Include="src\bindings\currencyview.cpp" />
     <ClCompile Include="src\bindings\diplomacyview.cpp" />
@@ -652,6 +653,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batviewerutils.h" />
     <ClInclude Include="include\bindings\attackview.h" />
     <ClInclude Include="include\bindings\battlemsgdataview.h" />
+    <ClInclude Include="include\bindings\battlemsgdataviewmutable.h" />
     <ClInclude Include="include\bindings\crystalview.h" />
     <ClInclude Include="include\bindings\currencyview.h" />
     <ClInclude Include="include\bindings\diplomacyview.h" />
