--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1271,6 +1271,9 @@
     <ClCompile Include="src\bindings\gameview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\battlemsgdataviewmutable.cpp">
+      <Filter>bindings</Filter>
+    </ClCompile>
     <ClCompile Include="src\sitecategories.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -3338,6 +3341,9 @@
       <Filter>bindings</Filter>
     </ClInclude>
     <ClInclude Include="include\bindings\gameview.h">
+      <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\battlemsgdataviewmutable.h">
       <Filter>bindings</Filter>
     </ClInclude>
     <ClInclude Include="include\scenarioobjectstreams.h">
